--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>EcliUpgradeTest</title>
+    <title>EcpoUpgradeTest</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ecli-upgrade-test.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ecpo-upgrade-test.css">
 
     {{content-for "head-footer"}}
   </head>
@@ -18,7 +18,7 @@
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/ecli-upgrade-test.js"></script>
+    <script src="{{rootURL}}assets/ecpo-upgrade-test.js"></script>
 
     {{content-for "body-footer"}}
   </body>
